<resources>
    <string name="app_name">smartNotify</string>
    <string name="main_header_text">smartNotify</string>
    <string name="favourite_label_text">Favourited Channels</string>
    <string name="all_label_text">All Channels</string>
    <string name="add_channel_button_desc">All Channels</string>
    <string name="sample_text">Channel Name Here</string>
    <string name="pfp_desc">Profile Picture</string>
    <string name="heart_button_desc">Favourited button</string>
    <string name="settings_button_desc">Settings button circle</string>

    <!-- Below here are the descriptions for the Add Channel dialogue -->
    <string name="add_channel_name_label">Channel Name:</string>
    <string name="add_channel_name_autofill">Enter the channel name here…</string>
    <string name="add_channel_ID_label">Channel URL or ID:</string>
    <string name="add_channel_ID_autofill">ex. UC8rcEBzJSleTkf_-agPM20g</string>
    <string name="add_channel_favourite">Favourite</string>
    <string name="add_channel_uploads_heading">Upload Settings</string>
    <string name="add_channel_uploads_notify">Get notifications for uploads</string>
    <string name="add_channel_uploads_filter_label">Filter notifications by keywords</string>
    <string name="add_channel_uploads_filter_autofill">Enter a keyword…</string>
    <string name="add_channel_streams_heading">Livestream Settings</string>
    <string name="add_channel_streams_notify">Get notifications for livestreams</string>
    <string name="add_channel_streams_filter_label">Filter notifications by keywords</string>
    <string name="add_channel_streams_filter_autofill">Enter a keyword…</string>
    <string name="add_channel_save">Add Channel</string>
    <string name="add_channel_cancel">Cancel</string>
</resources>