<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgChannelPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/pfp_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

    <TextView
        android:id="@+id/labelChannelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sample_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgChannelPic"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/boxSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgSettingButtonTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings_button_desc"
            app:srcCompat="@drawable/settings_circle"
            tools:ignore="RedundantDescriptionCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <ImageView
            android:id="@+id/imgSettingButtonMid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings_button_desc"
            app:srcCompat="@drawable/settings_circle"
            tools:ignore="RedundantDescriptionCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <ImageView
            android:id="@+id/imgSettingButtonBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings_button_desc"
            app:srcCompat="@drawable/settings_circle"
            tools:ignore="RedundantDescriptionCheck" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/heart_button_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boxSettingsButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart_unchecked"
        tools:ignore="RedundantDescriptionCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>