<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddChannel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/add_channel_button_desc"
        android:focusable="true"
        app:backgroundTint="@color/pri_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ScrollView
        android:id="@+id/viewBaseScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutFavourited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/boxFavHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                        <View
                            android:id="@+id/barFavOne"
                            android:layout_width="wrap_content"
                            android:layout_height="2dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@color/default_text" />

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                        <TextView
                            android:id="@+id/textFav"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/favourite_label_text"
                            android:textColor="@color/default_text" />

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                        <View
                            android:id="@+id/barFavTwo"
                            android:layout_width="wrap_content"
                            android:layout_height="2dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@color/default_text" />

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/boxFavChannels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/boxFavHeader"></LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutAdded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/boxAllHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                        <View
                            android:id="@+id/barAllOne"
                            android:layout_width="wrap_content"
                            android:layout_height="2dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@color/default_text" />

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                        <TextView
                            android:id="@+id/textAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/all_label_text"
                            android:textColor="@color/default_text" />

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                        <View
                            android:id="@+id/barAllTwo"
                            android:layout_width="wrap_content"
                            android:layout_height="2dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@color/default_text" />

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/boxAllChannels"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/boxAllHeader"></LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>